--- a/index.html
+++ b/index.html
@@ -12,26 +12,38 @@
       media="screen"
       href="assets/css/style.css"
     />
-    <script src="main.js"></script>
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="assets/javascript/game.js"></script>
   </head>
   <body>
     <div id="parentTitleBox">
       <div class="titleBox">Crystal Collectors!</div>
       <div id="instructionBox"></div>
       <div id="parentRanWlBox">
-        <div class="randomNumberBox"></div>
+        <div class="ranNumBox"></div>
         <div class="winLoseBox"></div>
       </div>
     </div>
 
     <div id="parentGameButtons">
-      <div type="button" class="box"></div>
+      <div type="button" class="box">
 
-      <div type="button" class="box"></div>
+      </div>
 
-      <div type="button" class="box"></div>
+      <div type="button" class="box">
 
-      <div type="button" class="box"></div>
+      </div>
+
+      <div type="button" class="box">
+
+      </div>
+
+      <div type="button" class="box">
+
+      </div>
+
       <div id="parentScore">
         <div class="score">
           <p>Your total score is:</p>
