--- a/index.html
+++ b/index.html
@@ -1,58 +1,63 @@
-<!DOCTYPE <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
     <title>Crystal Collector</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      media="screen"
-      href="assets/css/style.css"
-    />
-    <!-- Jquery -->
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+    <div class="header">
+        <h1>Crystal Collector</h1>
+    </div>
+    <div class="instructions">
+        <h3>Here's how you play the game</h3>
+        </br>
+        <ol>
+            <li>You will be given a random number at the start of the game.<span>"Number To Get"</span></li>
+            <li>There are four crystals below.</li>
+            <ul>
+                <li id="blue">Blue</li>
+                <li id="green">Green</li>
+                <li id="red">Red</li>
+                <li id="yellow">Yellow</li>
+            </ul>
+            <li>By clicking on a crystal, you will add a specific amount of points to your total score.</li>
+            <li>You win the game by matching your total score to the random number.</li>
+            <li>You lose the game if your total score goes above the random number.</li>
+            <li>The value of each crystal is hidden from you until you click on it.</li>
+            <li>Each time when the game starts, the game will change the values of each crystal.</li>
+        </ol>
+    </div>
+    <div class="numberToMatch">
+        <h2>Number To Get:
+            <span id="randomNumber"></span>
+        </h2>
+    </div>
+    <div class="winsAndLosses">
+        <h2>Wins:
+            <span id="numberWins"></span>
+            </br>
+            Losses:
+            <span id="numberLosses"></span>
+        </h2>
+    </div>
+    <div class="gems">
+        <img src="assets/images/blue.png" class=gemImage id="one" alt="Blue Gem">
+        <img src="assets/images/green.png" class=gemImage id="two" alt="Green Gem">
+        <img src="assets/images/red.png" class=gemImage id="three" alt="Red Gem">
+        <img src="assets/images/yellow.png" class=gemImage id="four" alt="Yellow Gem">
+    </div>
+    <div class="userTotal">
+        <h2>Your total score is:
+            <span id="finalTotal"></span>
+        </h2>
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="assets/javascript/game.js"></script>
-  </head>
-  <body>
-    <div id="parentTitleBox">
-      <div class="titleBox">Crystal Collectors!</div>
-      <div id="instructionBox"></div>
-      <div id="parentRanWlBox">
-        <div class="ranNumBox"></div>
-        <div class="winLoseBox"></div>
-      </div>
-    </div>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
+</body>
 
-    <div id="parentGameButtons">
-      <div type="button" class="box">
-
-      </div>
-
-      <div type="button" class="box">
-
-      </div>
-
-      <div type="button" class="box">
-
-      </div>
-
-      <div type="button" class="box">
-
-      </div>
-
-      <div id="parentScore">
-        <div class="score">
-          <p>Your total score is:</p>
-        </div>
-
-        <div class="scoreDisplay">
-          <p class="scoreDisplayChild"></p>
-        </div>
-      </div>
-    </div>
-  </body>
 </html>
